@@ -24,12 +24,12 @@
 # see the comments in this file for information about what options are
 # available and how they can be set.
 #
-# "cvs2hg" is shorthand for "cvs2svn in the mode where it is
-# outputting to Mercurial instead of Subversion".  But the program
-# that needs to be run is still called "cvs2svn".  Run it with the
-# --options option, passing it this file as argument:
+# "cvs2hg" is shorthand for "cvs2git in the mode where it is
+# outputting to Mercurial instead of git".  But the program that needs
+# to be run is still called "cvs2git".  Run it with the --options
+# option, passing it this file as argument:
 #
-#     cvs2svn --options=cvs2hg-example.options
+#     cvs2git --options=cvs2hg-example.options
 #
 # Mercurial can (experimentally at this time) read git-fast-import
 # format via its "hg fastimport" extension, with a couple of
@@ -80,9 +80,9 @@
 #     ctx -- a Ctx object (see cvs2svn_lib/context.py), which holds
 #         many configuration options
 #
-#     run_options -- an instance of the RunOptions class (see
-#         cvs2svn_lib/run_options.py), which holds some variables
-#         governing how cvs2svn is run
+#     run_options -- an instance of the GitRunOptions class (see
+#         cvs2svn_lib/git_run_options.py), which holds some variables
+#         governing how cvs2git is run
 
 
 # Import some modules that are used in setting the options:
